fixed bugs, updated code for Java 1.5
[git-p4: depot-paths = "//depot/code/antlrworks/main/": change = 3451]